Fix up spacing for action items in IE.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -465,9 +465,9 @@ a {
           margin: 0;
           padding: 0;
           
-          width: 60px;
+          width: 70px;
           position: absolute;
-          right: 10px;
+          right: 0;
           top: 15px;
           
           li {
